# HPC-Performance-Benchmark-Optimization

./: .gitignore  CLEAN_RERUN_REPORT.md  CMakeLists.txt  CMakePresets.json  README.md  REPORT.md  build_log.txt  build_log_2.txt  out.txt  repro-notes.md  results_add.json  results_copy.json  results_debug_copy.json  results_debug_flops.json  results_dot.json  results_flops.json  results_fma.json  results_latency.json  results_saxpy.json  results_triad.json
.github/: copilot-instructions.md
audit_results/: add_run1.json  copy_run1.json  dot_run1.json  flops_run1.json  flops_run2.json  flops_run3.json  fma_run1.json  fma_run2.json  fma_run3.json  saxpy_run1.json  scale_run1.json  smoke_add.json  smoke_copy.json  smoke_dot.json  smoke_flops.json  smoke_fma.json  smoke_latency.json  smoke_saxpy.json  smoke_scale.json  smoke_triad.json  triad_run1.json  triad_run2.json  triad_run3.json
build_opt_O2/: ALL_BUILD.vcxproj  CMakeCache.txt  HPC_Benchmarking.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bench.vcxproj  bench.vcxproj.filters  cmake_install.cmake
build_opt_O2/bench.dir/Release/: bench.exe.recipe
build_opt_O2/bench.dir/Release/bench.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_opt_O2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_opt_O2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build_opt_O2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_opt_O2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build_opt_O2_AVX/: ALL_BUILD.vcxproj  CMakeCache.txt  HPC_Benchmarking.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bench.vcxproj  bench.vcxproj.filters  cmake_install.cmake
build_opt_O2_AVX/bench.dir/Release/: bench.exe.recipe
build_opt_O2_AVX/bench.dir/Release/bench.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_opt_O2_AVX/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_opt_O2_AVX/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_opt_O2_AVX/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_opt_O2_AVX/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build_opt_O2_AVX2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HPC_Benchmarking.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bench.vcxproj  bench.vcxproj.filters  cmake_install.cmake
build_opt_O2_AVX2/bench.dir/Release/: bench.exe.recipe
build_opt_O2_AVX2/bench.dir/Release/bench.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_opt_O2_AVX2/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_opt_O2_AVX2/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_opt_O2_AVX2/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_opt_O2_AVX2/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
include/: .gitignore  aligned_buffer.hpp  config.hpp  results.hpp  size_parse.hpp  stream_kernels.hpp  sys_info.hpp  timer.hpp  utils.hpp
pinned_results/: add_pin1.json  copy_pin1.json  flops_pin1.json  flops_pin2.json  flops_pin3.json  fma_pin1.json  fma_pin2.json  fma_pin3.json  latency_pin1.json  triad_direct_test.json  triad_nothread_test.json  triad_pin1.json  triad_pin2.json  triad_pin3.json  triad_pin4.json  triad_pin5.json  triad_pin6.json
pinned_results/clean_rerun/: add_clean_1.json  copy_clean_1.json  flops_clean_1.json  flops_clean_2.json  flops_clean_3.json  fma_clean_1.json  fma_clean_2.json  fma_clean_3.json  latency_clean_1.json  latency_clean_2.json  triad_clean_1.json  triad_clean_2.json  triad_clean_3.json
results/: results_triad_w50_i200.json
results_fresh/: add.json  copy.json  copy_2threads.json  dot.json  dot_prefault_aligned.json  flops.json  flops_64MB.json  flops_kib.json  fma.json  fma_64MB.json  latency.json  latency_seed42.json  saxpy.json  scale.json  stream_alias.json  stream_copy_alias.json  triad.json  triad_representative.json
scripts/: aggregate_runs.py  check_schema.py  plot_bandwidth_vs_size.py  plot_latency_vs_size.py  plot_results.py  run_all.ps1  run_bench_runs.ps1  run_llvm_mca.py  run_opt_experiment.py  run_perf_stat.py  run_suite.py  run_valgrind_cachegrind.py
src/: compute_bench.cpp  latency_bench.cpp  main.cpp  stream_sweep.cpp  sys_info.cpp
